--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,11 @@ body {
   top: 45%;
   left: 45%;
 }
+input[type="checkbox"] {
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+}
 
 .card-overlay {
   /* Overlay styles */
